Added Array.prototype.forEach implemetation

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,10 +11,6 @@
 	<body>
 		<div class="container"> </div>
         <script> var log = function() { if ( console ) console.log.apply(console, arguments); }; </script>
-        <script src="allIndexOf.js"></script>
-        <script>
-	        var bb = allIndexOf([1, 2, 3, 3, 4, 6, 3, 7, 8, 9, 10, 3], 3);
-	        console.log(bb);
-        </script>
+        <script src="test.js"></script>
 	</body>
 </html>
